--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Firebase admin private key
+firebase_private_key.json
 
 # Created by https://www.gitignore.io/api/node,linux,macos,angular
 # Edit at https://www.gitignore.io/?templates=node,linux,macos,angular
