--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "firebase-admin": "^8.9.2",
+    "mongoose": "^5.9.2",
     "morgan": "^1.9.1"
   }
 }
