--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.0",
     "firebase-admin": "^8.9.2",
     "mongoose": "^5.9.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nodemailer": "^6.4.3"
   }
 }
